--- a/1_advanced/tsconfig.json
+++ b/1_advanced/tsconfig.json
@@ -16,7 +16,7 @@
     "rootDir": "./src",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
     // "composite": true,                     /* Enable project compilation */
     // "tsBuildInfoFile": "./",               /* Specify file to store incremental compilation information */
-    // "removeComments": true,                /* Do not emit comments to output. */
+    "removeComments": true,                /* Do not emit comments to output. */
     // "noEmit": true,                        /* Do not emit outputs. */
     // "importHelpers": true,                 /* Import emit helpers from 'tslib'. */
     // "downlevelIteration": true,            /* Provide full support for iterables in 'for-of', spread, and destructuring when targeting 'ES5' or 'ES3'. */
@@ -57,7 +57,7 @@
     // "inlineSources": true,                 /* Emit the source alongside the sourcemaps within a single file; requires '--inlineSourceMap' or '--sourceMap' to be set. */
 
     /* Experimental Options */
-    // "experimentalDecorators": true,        /* Enables experimental support for ES7 decorators. */
+    "experimentalDecorators": true,        /* Enables experimental support for ES7 decorators. */
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
 
     /* Advanced Options */
@@ -65,12 +65,13 @@
   },
 
 
-  // 'exclude': [
+  "exclude": [
     // /node_modules - by default
-  //   "./module.ts"
-  // ],
+    "./module.ts",
+    "src/generic.ts"
+  ],
   // "include": ["./.../**/*",],
-  "files": ["./src/generic.ts"]
+  // "files": ["./src/app.ts"]
 }
 
 
